# aws-model-test

./: Dockerfile  notes  pyproject.toml  requirements.txt
data/: verbatims_nps_C0.csv
notebook/: experim.ipynb
notebook/artifacts/: xgb_model.pkl
src/: inference.py
